backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/backend_net: "true"
        io.kompose.network/postgres_net: "true"
        io.kompose.service: backend
    spec:
      containers:
        - args:
            - bash
            - -c
            - while !</dev/tcp/postgres/5432; do sleep 1; done; python entrypoint.py
          image: backend
          name: backend-server
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
