backend/mail-dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mail-dev
  name: mail-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mail-dev
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/backend_net: "true"
        io.kompose.service: mail-dev
    spec:
      containers:
        - image: maildev/maildev
          name: mail-dev
          ports:
            - containerPort: 1080
            - containerPort: 1025
          resources: {}
      restartPolicy: Always
status: {}
