backend/mail_dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mail-dev
  name: mail_dev
spec:
  ports:
    - name: "1080"
      port: 1080
      targetPort: 1080
    - name: "1025"
      port: 1025
      targetPort: 1025
  selector:
    io.kompose.service: mail-dev
status:
  loadBalancer: {}
